--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "peer": "^0.6.1",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-bootstrap-icons": "^1.2.3",
+    "react-confirm-alert": "^2.6.2",
     "react-dom": "^17.0.1",
+    "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^3.2.0",
+    "tsutils": "^3.19.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
