--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "peer": "^0.6.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-icons": "^1.2.3",
     "react-confirm-alert": "^2.6.2",
+    "react-datetime": "^3.0.4",
     "react-dom": "^17.0.1",
+    "react-light-notifications": "^1.0.6",
+    "react-moment": "^1.1.1",
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
